// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vuetable - Special Fields - Basic HTML structure has same HTML structure for __checkbox special field 1`] = `
<table class="vuetable ui blue selectable celled stackable attached table">
    <thead>
        <tr>
            <th class="vuetable-th-checkbox-id"><input type="checkbox"></th>
            <!---->
            <!---->
            <!---->
            <!---->
            <th id="_code" class="vuetable-th-code">Code</th>
        </tr>
    </thead>
    <tbody class="vuetable-body">
        <tr>
            <td colspan="2" class="vuetable-empty-result">No Data Available</td>
        </tr>
    </tbody>
</table>
`;

exports[`Vuetable - Special Fields - Basic HTML structure has same HTML structure for __component special field 1`] = `
<table class="vuetable ui blue selectable celled stackable attached table">
    <thead>
        <tr>
            <!---->
            <th class="vuetable-th-component-id"></th>
            <!---->
            <!---->
            <!---->
            <th id="_code" class="vuetable-th-code">Code</th>
        </tr>
    </thead>
    <tbody class="vuetable-body">
        <tr>
            <td colspan="2" class="vuetable-empty-result">No Data Available</td>
        </tr>
    </tbody>
</table>
`;

exports[`Vuetable - Special Fields - Basic HTML structure has same HTML structure for __handle special field 1`] = `
<table class="vuetable ui blue selectable celled stackable attached table">
    <thead>
        <tr>
            <!---->
            <!---->
            <!---->
            <!---->
            <th class="vuetable-th-__handle"></th>
            <th id="_code" class="vuetable-th-code">Code</th>
        </tr>
    </thead>
    <tbody class="vuetable-body">
        <tr>
            <td colspan="2" class="vuetable-empty-result">No Data Available</td>
        </tr>
    </tbody>
</table>
`;

exports[`Vuetable - Special Fields - Basic HTML structure has same HTML structure for __sequence special field 1`] = `
<table class="vuetable ui blue selectable celled stackable attached table">
    <thead>
        <tr>
            <!---->
            <!---->
            <!---->
            <th class="vuetable-th-sequence"></th>
            <!---->
            <th id="_code" class="vuetable-th-code">Code</th>
        </tr>
    </thead>
    <tbody class="vuetable-body">
        <tr>
            <td colspan="2" class="vuetable-empty-result">No Data Available</td>
        </tr>
    </tbody>
</table>
`;

exports[`Vuetable - Special Fields - Basic HTML structure has same HTML structure for __slot special fields 1`] = `
<table class="vuetable ui blue selectable celled stackable attached table">
    <thead>
        <tr>
            <!---->
            <!---->
            <th class="vuetable-th-slot-sample-slot"></th>
            <!---->
            <!---->
            <th id="_code" class="vuetable-th-code">Code</th>
        </tr>
    </thead>
    <tbody class="vuetable-body">
        <tr>
            <td colspan="2" class="vuetable-empty-result">No Data Available</td>
        </tr>
    </tbody>
</table>
`;

exports[`Vuetable - Special Fields - Basic HTML structure has same basic HTML structure 1`] = `
<table class="vuetable ui blue selectable celled stackable attached table">
    <thead>
        <tr>
            <th id="_code" class="vuetable-th-code">Code</th>
            <th id="_description" class="vuetable-th-description">Description</th>
        </tr>
    </thead>
    <tbody class="vuetable-body">
        <tr>
            <td colspan="2" class="vuetable-empty-result">No Data Available</td>
        </tr>
    </tbody>
</table>
`;
